--- a/inner-page.html
+++ b/inner-page.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
@@ -36,8 +36,7 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center">
 
-      <!--<h1 class="logo me-auto"><a href="index.html">Apply Online</a></h1>-->
-      <!-- Uncomment below if you prefer to use an image logo -->
+    
       <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar">
@@ -85,16 +84,6 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!--<section class="inner-page">
-      <div class="container">
-        <form action="" method="post">
-            <p><input  id="" name="email" placeholder="Your Email Address"  autocomplete="off" required/></p>
-            <p><input id="" type="password" placeholder="Your password"  autocomplete="off" required></p>
-            <p><button id="" type="submit">SIGN IN</button></p>
-            <p style="color: black">Don't have an account? <a href="register.html" id="">click here</a></p>
-        </form>
-      </div>
-    </section>-->
     <section class="vh-100" style="background-color: #f3f5fa;">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -211,7 +200,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
